--- a/ev.html
+++ b/ev.html
@@ -51,6 +51,7 @@
     <script async="async" src="_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
+    <link rel="next" title="&lt;no title&gt;" href="Untitled1.html" />
     <link rel="prev" title="Jupyter Book for UCLAx Open Webinars on Python" href="landing.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="docsearch:language" content="None">
@@ -478,6 +479,13 @@
             <p class="prev-next-subtitle">previous</p>
             <p class="prev-next-title">Jupyter Book for UCLAx Open Webinars on Python</p>
         </div>
+    </a>
+    <a class='right-next' id="next-link" href="Untitled1.html" title="next page">
+    <div class="prev-next-info">
+        <p class="prev-next-subtitle">next</p>
+        <p class="prev-next-title">&lt;no title&gt;</p>
+    </div>
+    <i class="fas fa-angle-right"></i>
     </a>
 </div>
             
